# learn-git

./: CHANGELOG.md  hello_world.py  pyproject.toml
.github/workflows/: on-release-merge.yml  release-please.yml
src/my_namespace/git_learning/: again.py  hello.py
